--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -47,9 +47,8 @@ a:hover {
 }
 
 .banner {
-    margin:0 auto;
-    background-image:url("asset/images/collegiale.jpg");
-    background-repeat: no-repeat;
+    background-image: url(asset/images/collegiales.jpg) no-repeat 0px 0px;
+    display: block;
     width: 1920px;
     height: 779px;
 }
