--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -47,7 +47,7 @@ a:hover {
 }
 
 .banner {
-    background-image: url("../images/collegiale.jpg");
+    background-image: url("../images/site_corot_1920.jpg");
     background-repeat: no-repeat;
     margin: 0 auto;
     width: auto;
