--- a/asset/css/rent.css
+++ b/asset/css/rent.css
@@ -1,16 +1,19 @@
-/* Left and right margins */
-ul {
-    list-style-type: none;
+nav {
+    display: flex;
+    display: contents;
     margin-left: 16px;
     margin-right: 16px;
 }
-/* Put a list on the same line with a space of 16px between each item. */
+
+ul {
+    list-style-type: none;
+    background-color: #B1F3BC;
+}
+/* Put a list on the same line. */
 li {
     display: inline-block;
-    padding-inline-start: 16px;
-    padding-inline-end: 5%;
 }
-/* class to reduce the size of an image... */ 
+    /* class to reduce the size of an image... */ 
 .mini {
     width: 24px;
 }
