--- a/asset/css/offers.css
+++ b/asset/css/offers.css
@@ -1,6 +1,34 @@
+body {
+    margin: 0;
 
-ul { 
-    justify-content: space-between;
-    color: rgb(255, 253, 240);
-    display: flex;
+}
+
+.header {
+    background: lightgreen;
+
+}
+
+.header-nav a {
+    padding: 0 50px 30px;
+}
+
+.acheter {
+    margin: 60px;
+}
+
+.auth {
+    margin: 0 120px;
+
+}
+
+.middle {
+    background: gray;
+}
+
+.nos-offres {
+    margin: 0 550px;
+}
+
+.footer {
+    background-color: grey;
 }
