--- a/asset/css/rent.css
+++ b/asset/css/rent.css
@@ -1,17 +1,35 @@
-nav {
+header {
     display: flex;
-    display: contents;
+    padding-inline: 10px;
+    justify-content: space-between;
+    background-color: #B1F3BC;
     margin-left: 16px;
     margin-right: 16px;
 }
 
-ul {
+nav {
+    height: 61px;
+    width: 1920px;
+}
+
+.menu {
+    /*remove point*/
     list-style-type: none;
-    background-color: #B1F3BC;
+    align-items: center;
+    
 }
 /* Put a list on the same line. */
-li {
-    display: inline-block;
+.menu-format {
+    
+    display: inline;
+    font-family: Baloo 2;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    
+    
+
 }
     /* class to reduce the size of an image... */ 
 .mini {
