--- a/asset/css/rent.css
+++ b/asset/css/rent.css
@@ -1,10 +1,10 @@
 header {
     display: flex;
-    padding-inline: 10px;
     justify-content: space-between;
     background-color: #B1F3BC;
-    margin-left: 16px;
-    margin-right: 16px;
+    justify-content: center;
+    
+    
 }
 
 nav {
@@ -15,19 +15,17 @@ nav {
 .menu {
     /*remove point*/
     list-style-type: none;
-    align-items: center;
-    
 }
 /* Put a list on the same line. */
 .menu-format {
     
     display: inline;
+    padding-left: 10px;
     font-family: Baloo 2;
     font-size: 24px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    
     
 
 }
