--- a/asset/css/estimate.css
+++ b/asset/css/estimate.css
@@ -1,6 +1,16 @@
-.main-head {
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     background: #b1f3bc;
     color: black;
+    height: 61px;
+    width: 100%;
 
 }
 
@@ -10,12 +20,128 @@ a {
 }
 
 nav {
-    min-height: 10vh;
     display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 61px;
 }
 
-nav ul {
+ul {
     display: flex;
-    flex: 1 1 40rem;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+    width: 100%;
+    margin-left: 250px;
+    margin-right: 250px;
+    font-size: 15px;
+}
+
+h2 {
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+    margin-bottom: 50px;
+    font-family: 'Baloo 2', sans-serif;
+}
+
+.info {
+    display: flex;
     justify-content: space-around;
+}
+
+
+.container {
+    max-width: 600px;
+    margin: 20px;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0,3);
+}
+
+
+button {
+    background: transparent;
+}
+
+button::after {
+    content: ;
+    width: 300px;
+    height: 300px;
+    background: #b1f3bc;
+}
+
+.menu {
+    display: flex;
+    gap: 40px;
+    font-family: 'Open Sans', sans-serif;
+}
+
+form {
+    justify-content: center;
+    margin: 15px;
+}
+
+h5 {
+    margin: 15px;
+    margin-top: 25px;
+    font-size: 15px;
+    font-family: 'Open Sans', sans-serif;
+    
+}
+
+.Adresse {
+    margin-bottom: 20px;
+    margin-top: 15px;
+    margin-right: 12px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 25px;
+}
+
+.selection {
+    margin-left: 20px;
+    font-size: 15px;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.titre {
+    display: flex;
+    justify-content: center;
+}
+
+fieldset {
+    margin-right: 250px;
+    margin-left: 250px;
+    box-shadow: 0 0 15px #000000;
+    border-radius: 10px;
+    
+}
+
+#Appart {
+    font-size: 25px;
+}
+
+.account {
+    display: block;
+    font-size: 15px;
+    margin-right: 10px;
+    background-color: #e2fbb7;
+    padding: 10px;
+    box-shadow: #e2fbb7;
+    border-radius: 10px;
+    font-family: 'Open Sans', sans-serif;
+    align-items: center;
+
+}
+
+input {
+    border-radius: 14px;
+}
+
+h3 {
+   display: flex;
+    justify-content: center;
+    margin-top: 30px;
+    margin-bottom: 50px;
+    font-family: 'Baloo 2', sans-serif; 
 }
