--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -3,6 +3,7 @@ body {
     width:100%;
     bottom:0;
     left:0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 a {
@@ -13,8 +14,9 @@ a {
 header {
     display: flex;
     background-color: #b1f3bc;
-    height: 100px;
-    padding-top: 20px;
+    /*height: 100px;*/
+    padding-top: 10px;
+    padding-bottom: 10px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -47,12 +49,13 @@ a:hover {
 /*bannière avec fonction recherche*/
 .banner {
     background-image: url("../images/site_corot_1920.jpg");
-    background-repeat: no-repeat;
+    /*background-repeat: no-repeat;
     margin: 0 auto;
     width: 100%;
-    height: 400px;
+    height: 263px;
     display: block;
-    position: absolute;
+    position: absolute;*/
+    padding: 50px 0;
 }
 
 .search {
@@ -60,7 +63,6 @@ a:hover {
     background-color: #ffffff95;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 80px;
     border-radius: 8px;
 }
 
@@ -82,6 +84,7 @@ a:hover {
 
 #menu_search_deco {
     background-color: #b1f3bc;
+    border: none;
 }
 
 
@@ -89,15 +92,22 @@ a:hover {
 .news {
     background-color: #1f1f1f;
     width: auto;
-    height: 579px;
-    display: block;
+    /*height: 579px;*/
+    /*display: block;*/
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.news_slide p {
+    color: #e71a1a;
 }
 
 /*section derniers biens en vente*/
 .sell {
-    background-color: white;
+    background-color: #ffffff;
     width: auto;
-    height: 916px;
-    display: block;
+    /*height: 916px;*/
+    /*display: block;*/
+    color: chartreuse;
 }
 
