--- a/asset/css/contact.css
+++ b/asset/css/contact.css
@@ -3,12 +3,17 @@ nav{
     height: 1024px*768px;
     padding: 1920px*61px;
     }
+    /*ajout truetype baloo 2 medium*/
+    @font-face {
+        font-family: baloo 2;
+        src: url(https://fonts.google.com/specimen/Baloo+2?query=bal);
+    }
 .logo{
     justify-content: flex-start;
     vertical-align: middle;
     font-style: normal;
-    font-weight: 400;
-    font-family: baloo2;
+    font-weight: 500;
+    font-family: "baloo 2";
     line-height: normal;
     height: 31.2px;
    }
@@ -18,13 +23,13 @@ nav{
     justify-content: space-between;
     align-items: center;
     vertical-align: middle;
-    padding-left: 30%;
-    padding-right: 30%;
-    padding-inline-start: 50%;
-    font-family: baloo2;
+    padding-left: 40%;
+    padding-right: 40%;
+    padding-inline-start: 30%;
+    font-family: "baloo 2";
     font-size: 24px;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 500;
     line-height: normal;
 }
 .bonhomme{
@@ -33,7 +38,7 @@ nav{
     vertical-align: middle;
     font-size: 24px;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 500;
     line-height: normal;
     height: 31.02px;
     padding-right: 0%;
@@ -43,10 +48,10 @@ nav{
     justify-content: flex-end;
     align-items: center;
     vertical-align: middle;
-    font-family: baloo2;
+    font-family: "baloo 2";
     font-size: 24px;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 500;
     line-height: normal;
     padding: 0%;
 }
@@ -54,17 +59,31 @@ main{
     padding: 1920px*1673px;
 }
 .NOUS CONTACTER{
-    display: contents;
-    justify-content: center;
-    align-items: center;
-    font-family: baloo 2;
+    /* pas de display cause centrage fixe en html*/
+    font-family: "baloo 2";
     font-size: 20px;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
 }
+/*.annonce à descendre même ligne rv*/
 .annonce{
+   display: block;
+   font-family: "open sans";
+   font-style: normal;
+   font-weight: 400;
+   line-height: normal;
+}
+.rv{
     display: block;
-    justify-content: left;
+    font-family: "open sans";
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+.autre demande {
+    /* astérisque (champs obligatoire) à mettre en rouge*/
+    display: list-item;
+    list-style: none;
 
 }
