--- a/asset/css/rent.css
+++ b/asset/css/rent.css
@@ -48,3 +48,17 @@ nav {
 .mini {
     width: 31px;
 }
+
+.font-title {
+    text-align: center;
+    background-color: #B1F3BC;
+    font-family: "Baloo2", sans-serif;
+    font-style: normal;
+    line-height: normal;
+    
+}
+
+.div1 { 
+    
+    
+}
