--- a/asset/css/sell.css
+++ b/asset/css/sell.css
@@ -11,7 +11,11 @@
 @font-face {
     font-family: "Baloo 2";
     src: 
-        url("/asset/fonts-family/Baloo2-Medium.ttf") format(truetype)
+        url("/asset/fonts-family/Baloo2-Medium.ttf") format(truetype);
+}
+@font-face {
+    font-family: "Open Sans";
+    src: url("/asset/fonts-family/OpenSans/OpenSans-Regular.ttf") format(truetype);
 }
 
 
