--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -23,6 +23,7 @@ header ul {
     display: flex;
     list-style: none;
     margin: 47px 0 5px 5px;
+    width: 100%;
 }
 
 header ul li {
@@ -38,8 +39,10 @@ nav {
 
 .auth {
    align-items: flex-end;
+   display: flex;
    margin-right: 50px;
    margin-top: 47px;
+   list-style: none;
 }
 
 a:hover {
