--- a/asset/css/rent.css
+++ b/asset/css/rent.css
@@ -53,6 +53,16 @@ nav {
 .div1 {
     display: flex;
     justify-content: center;
+    position: relative;
+    padding-top: 10px;
+    padding-bottom: 180px;
+}
+
+.div2 {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    padding: auto;
     
     
 }
@@ -63,6 +73,4 @@ nav {
     font-family: "Baloo2", sans-serif;
     font-style: normal;
     line-height: normal;
-    
 }
-
