--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -6,6 +6,11 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+h1 {
+    font-size: 25px;
+    font-weight: 400;
+}
+
 a {
     text-decoration: none;
     color: black;
@@ -94,14 +99,18 @@ a:hover {
     padding-bottom: 80px;
 }
 
+.news h1 {
+    color: #ffffff;
+    text-align: center;
+    position: relative;
+    top: -50px;
+}
 .news_slide {
     display: flex;
     list-style: none;
     justify-content: space-around;
-}
-
-.news_slide a {
-    /*color: #ffffff;*/
+    padding-left: 80px;
+    padding-right: 80px;
 }
 
 .news_1 {
@@ -144,6 +153,29 @@ a:hover {
 .activ_news_all span {
    position: relative;
    top: 30%;
+   font-size: larger;
+}
+
+.activ_news_all_btn {
+    display: inline-block;
+    background:#e2fbb7;
+    border-radius:50%;
+    width:28px;
+    height:28px;
+    border:1px solid #1f1f1f; 
+    margin-top: 33%;
+}
+
+.activ_news_all_btn span {
+    font-size: 40px;
+    font-weight: 300;
+    position:relative;
+    top: -18px;
+    left: 0;
+}
+
+.activ_news_all_btn span:hover {
+    font-weight: 500;
 }
 
 .activ_news {
@@ -157,6 +189,7 @@ a:hover {
     -moz-border-radius: 0 0 7px 7px;
     -webkit-border-radius: 0 0 7px 7px;
     border-radius: 0 0 7px 7px;
+    
 }
 
 .activ_news a:hover {
@@ -167,6 +200,30 @@ a:hover {
 .sell {
     background-color: #ffffff;
     width: auto;
-    color: chartreuse;
+    padding-top: 80px;
+    padding-bottom: 80px;
 }
 
+.sell h1 {
+    color: #000000;
+    text-align: center;
+    position: relative;
+    top: -50px;
+}
+
+.sell_slide {
+    display: flex;
+    list-style: none;
+    justify-content: space-around;
+    padding-left: 80px;
+    padding-right: 80px;
+}
+
+.sell_frame{
+    border:#1f1f1f solid 1px;
+    padding-top: 100px;
+    padding-bottom: 50px;
+    -moz-border-radius:7px;
+    -webkit-border-radius:7px;
+    border-radius:7px;
+}
