--- a/asset/css/estimate.css
+++ b/asset/css/estimate.css
@@ -9,7 +9,7 @@ header {
     align-items: center;
     background: #b1f3bc;
     color: black;
-    height: 61px;
+    padding-top: 3px;
     width: 100%;
 
 }
@@ -17,13 +17,15 @@ header {
 a {
     color: black;
     text-decoration: none;
+
 }
 
 nav {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    height: 61px;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 ul {
@@ -136,6 +138,7 @@ fieldset {
 
 input {
     border-radius: 14px;
+    font-family: 'Open Sans', sans-serif;
 }
 
 h3 {
@@ -144,4 +147,71 @@ h3 {
     margin-top: 30px;
     margin-bottom: 50px;
     font-family: 'Baloo 2', sans-serif; 
+}
+
+.logo {
+    max-width: 100%;
+    height: auto;
+}
+
+.esti {
+    margin-top: 20px;
+    height: 400px;
+    border-radius: 10px;
+}
+
+.onesti {
+    margin-top: 20px;
+    margin-left: 146px;
+    height: 400px;
+    border-radius: 10px;
+}
+
+.ensa {
+    display: block;
+    font-size: 15px;
+    margin-right: 10px;
+    background-color: #e2fbb7;
+    padding: 10px;
+    border-radius: 10px;
+    font-family: 'Open Sans', sans-serif;
+    margin-top: 15px;
+    margin-left: 228px;
+}
+
+.ensaone{
+    display: block;
+    font-size: 15px;
+    margin-right: 10px;
+    background-color: #e2fbb7;
+    padding: 10px;
+    border-radius: 10px;
+    font-family: 'Open Sans', sans-serif;
+    margin-top: 15px;
+    margin-left: 207px;
+}
+
+p{
+    font-family: 'Open Sans', sans-serif;
+    text-align: center;
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin: 15px;
+}
+
+
+.service {
+    display: flex;
+    flex-direction: column;
+}
+
+
+h4 {
+    flex-direction: column;
+    align-items: center;
 }
